test/spec_vectors/memory/fail/module_26.wat
(module (memory 4294967296))